implementado celery para el procesamiento de imagenes

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,6 +15,9 @@ DATABASE_USER=django_user
 DATABASE_PASSWORD=django_password
 DATABASE_PORT=3306
 
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
+
 # OpenAI API Configuration
 OPENAI_API_KEY=your-openai-api-key-here
 
@@ -33,10 +36,6 @@ AWS_S3_OBJECT_PARAMETERS={
 AWS_REKOGNITION_REGION=us-east-1
 CONTENT_MODERATION_CONFIDENCE_THRESHOLD=80.0
 ALLOWED_MODERATION_LABELS=Suggestive,Female_Swimwear_Or_Underwear,Male_Swimwear_Or_Underwear
-
-# Celery Configuration (for async tasks)
-CELERY_BROKER_URL=redis://localhost:6379
-CELERY_RESULT_BACKEND=redis://localhost:6379
 
 # Email Configuration (optional)
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
