registro con email de verificacion cuando no es por google

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -45,6 +45,18 @@ EMAIL_USE_TLS=True
 EMAIL_HOST_USER=your-email@gmail.com
 EMAIL_HOST_PASSWORD=your-email-password
 
+# Brevo Email Verification (optional)
+# Use these if you want to send verification codes via Brevo/Sendinblue
+BREVO_API_KEY=your-brevo-api-key
+EMAIL_FROM_ADDRESS=no-reply@splashmy.app
+EMAIL_FROM_NAME=SplashMy
+# Optional transactional template ID if using Brevo templates
+EMAIL_VERIFICATION_TEMPLATE_ID=
+# Verification settings
+EMAIL_VERIFICATION_CODE_TTL_MINUTES=10
+EMAIL_VERIFICATION_MAX_ATTEMPTS=5
+EMAIL_VERIFICATION_RESEND_COOLDOWN_SECONDS=60
+
 # File Upload Limits
 MAX_UPLOAD_SIZE=10485760  # 10MB in bytes
 ALLOWED_IMAGE_EXTENSIONS=jpg,jpeg,png,gif,webp
