--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,3 +16,6 @@ whitenoise==6.6.0
 boto3==1.34.20
 django-storages==1.14.2
 django-environ==0.11.2
+
+# Email (Brevo / Sendinblue)
+sib-api-v3-sdk==7.6.0
