integrat inicio con google

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,6 +18,12 @@ DATABASE_PORT=3306
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND=redis://redis:6379/0
 
+# Google OAuth (Authorization Code Flow)
+GOOGLE_OAUTH_CLIENT_ID=your-google-oauth-client-id
+GOOGLE_OAUTH_CLIENT_SECRET=your-google-oauth-client-secret
+GOOGLE_OAUTH_REDIRECT_URI=http://localhost:8000/api/v1/auth/google/callback/
+FRONTEND_OAUTH_REDIRECT_URL=http://localhost:3000/oauth/callback
+
 # OpenAI API Configuration
 OPENAI_API_KEY=your-openai-api-key-here
 
