mejoras esteticas modal registro y envio de contacto

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -54,7 +54,7 @@ EMAIL_HOST_PASSWORD=your-email-password
 # Brevo Email Verification (optional)
 # Use these if you want to send verification codes via Brevo/Sendinblue
 BREVO_API_KEY=your-brevo-api-key
-EMAIL_FROM_ADDRESS=no-reply@splashmy.app
+EMAIL_FROM_ADDRESS=jaumefernandezsunyer12@gmail.com
 EMAIL_FROM_NAME=SplashMy
 # Optional transactional template ID if using Brevo templates
 EMAIL_VERIFICATION_TEMPLATE_ID=
@@ -62,6 +62,10 @@ EMAIL_VERIFICATION_TEMPLATE_ID=
 EMAIL_VERIFICATION_CODE_TTL_MINUTES=10
 EMAIL_VERIFICATION_MAX_ATTEMPTS=5
 EMAIL_VERIFICATION_RESEND_COOLDOWN_SECONDS=60
+
+# Support/Contact
+SUPPORT_INBOX_EMAIL=jaumefernandezsunyer12@gmail.com
+CONTACT_SUPPORT_TEMPLATE_ID=
 
 # File Upload Limits
 MAX_UPLOAD_SIZE=10485760  # 10MB in bytes
