preparado para desplegar

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,6 +7,8 @@ DJANGO_SETTINGS_MODULE=config.settings
 ENVIRONMENT=development
 USE_S3_STORAGE=False
 USE_CONTENT_MODERATION=False
+MEDIA_URL=https://api.tu-dominio.com/media/
+BACKEND_HOST=api.tu-dominio.com
 
 # Database Configuration
 DATABASE_HOST=db
